More design changes to the Web App

--- a/ETL Pipeline Preparation.ipynb
+++ b/ETL Pipeline Preparation.ipynb
@@ -2201,6 +2201,340 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>message</th>\n",
+       "      <th>original</th>\n",
+       "      <th>genre</th>\n",
+       "      <th>related</th>\n",
+       "      <th>request</th>\n",
+       "      <th>offer</th>\n",
+       "      <th>aid_related</th>\n",
+       "      <th>medical_help</th>\n",
+       "      <th>medical_products</th>\n",
+       "      <th>...</th>\n",
+       "      <th>aid_centers</th>\n",
+       "      <th>other_infrastructure</th>\n",
+       "      <th>weather_related</th>\n",
+       "      <th>floods</th>\n",
+       "      <th>storm</th>\n",
+       "      <th>fire</th>\n",
+       "      <th>earthquake</th>\n",
+       "      <th>cold</th>\n",
+       "      <th>other_weather</th>\n",
+       "      <th>direct_report</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Weather update - a cold front from Cuba that c...</td>\n",
+       "      <td>Un front froid se retrouve sur Cuba ce matin. ...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Is the Hurricane over or is it not over</td>\n",
+       "      <td>Cyclone nan fini osinon li pa fini</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Looking for someone but no name</td>\n",
+       "      <td>Patnm, di Maryani relem pou li banm nouvel li ...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
+       "      <td>UN reports Leogane 80-90 destroyed. Only Hospi...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>says: west side of Haiti, rest of the country ...</td>\n",
+       "      <td>facade ouest d Haiti et le reste du pays aujou...</td>\n",
+       "      <td>direct</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                            message  \\\n",
+       "0   2  Weather update - a cold front from Cuba that c...   \n",
+       "1   7            Is the Hurricane over or is it not over   \n",
+       "2   8                    Looking for someone but no name   \n",
+       "3   9  UN reports Leogane 80-90 destroyed. Only Hospi...   \n",
+       "4  12  says: west side of Haiti, rest of the country ...   \n",
+       "\n",
+       "                                            original   genre  related  \\\n",
+       "0  Un front froid se retrouve sur Cuba ce matin. ...  direct        1   \n",
+       "1                 Cyclone nan fini osinon li pa fini  direct        1   \n",
+       "2  Patnm, di Maryani relem pou li banm nouvel li ...  direct        1   \n",
+       "3  UN reports Leogane 80-90 destroyed. Only Hospi...  direct        1   \n",
+       "4  facade ouest d Haiti et le reste du pays aujou...  direct        1   \n",
+       "\n",
+       "   request  offer  aid_related  medical_help  medical_products  ...  \\\n",
+       "0        0      0            0             0                 0  ...   \n",
+       "1        0      0            1             0                 0  ...   \n",
+       "2        0      0            0             0                 0  ...   \n",
+       "3        1      0            1             0                 1  ...   \n",
+       "4        0      0            0             0                 0  ...   \n",
+       "\n",
+       "   aid_centers  other_infrastructure  weather_related  floods  storm  fire  \\\n",
+       "0            0                     0                0       0      0     0   \n",
+       "1            0                     0                1       0      1     0   \n",
+       "2            0                     0                0       0      0     0   \n",
+       "3            0                     0                0       0      0     0   \n",
+       "4            0                     0                0       0      0     0   \n",
+       "\n",
+       "   earthquake  cold  other_weather  direct_report  \n",
+       "0           0     0              0              0  \n",
+       "1           0     0              0              0  \n",
+       "2           0     0              0              0  \n",
+       "3           0     0              0              0  \n",
+       "4           0     0              0              0  \n",
+       "\n",
+       "[5 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 298,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean_two.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    19906\n",
+       "0     6122\n",
+       "Name: related, dtype: int64"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean_two['related'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "related = df_clean_two[df_clean_two['related'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5                 Information about the National Palace-\n",
+       "8        I would like to receive the messages, thank you\n",
+       "11     I am in Petionville. I need more information r...\n",
+       "17     are you going to call me or do you want me to ...\n",
+       "18        I don't understand how to use this thing 4636.\n",
+       "25                    Can you tell me about this service\n",
+       "30     Good evening, Radio one please. I would like i...\n",
+       "32     I'm here, I didn't find the person that I need...\n",
+       "52     I'm listening to you at Miraguan we asking the...\n",
+       "66           i am very happy, i hear god, religious hyme\n",
+       "79         I would like to know how food is distributed.\n",
+       "80     I can play carnaval Anbasad Camp there I think...\n",
+       "82     ples give us cell cards ( cell phone minuts ) ...\n",
+       "83     Whoever sees her in the streets : she was wear...\n",
+       "87         good people help us. god bless you and us too\n",
+       "96          Digicel let me go through, it's an emergency\n",
+       "97                 Where can I find Capital Bank please?\n",
+       "103    URGENT ACTION NEEDED --this is follow up from ...\n",
+       "104               Please add airtime on my phone. Thanks\n",
+       "115    City that i'm near is Port-au Prince for me 'm...\n",
+       "Name: message, dtype: object"
+      ]
+     },
+     "execution_count": 317,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "related['message'][:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     Weather update - a cold front from Cuba that c...\n",
+       "1               Is the Hurricane over or is it not over\n",
+       "2                       Looking for someone but no name\n",
+       "3     UN reports Leogane 80-90 destroyed. Only Hospi...\n",
+       "4     says: west side of Haiti, rest of the country ...\n",
+       "5                Information about the National Palace-\n",
+       "6                        Storm at sacred heart of jesus\n",
+       "7     Please, we need tents and water. We are in Sil...\n",
+       "8       I would like to receive the messages, thank you\n",
+       "9     I am in Croix-des-Bouquets. We have health iss...\n",
+       "10    There's nothing to eat and water, we starving ...\n",
+       "11    I am in Petionville. I need more information r...\n",
+       "12    I am in Thomassin number 32, in the area named...\n",
+       "13    Let's do it together, need food in Delma 75, i...\n",
+       "14    More information on the 4636 number in order f...\n",
+       "15    A Comitee in Delmas 19, Rue ( street ) Janvier...\n",
+       "16    We need food and water in Klecin 12. We are dy...\n",
+       "17    are you going to call me or do you want me to ...\n",
+       "18       I don't understand how to use this thing 4636.\n",
+       "19    I would like to know if the earthquake is over...\n",
+       "Name: message, dtype: object"
+      ]
+     },
+     "execution_count": 316,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean_two['message'][:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
