--- a/ETL Pipeline Preparation.ipynb
+++ b/ETL Pipeline Preparation.ipynb
@@ -942,7 +942,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_col_clean = []"
+    "#category_col_clean = []"
    ]
   },
   {
@@ -951,8 +951,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for cat in categories:\n",
-    "    category_col_clean.append(cat[0])"
+    "#for cat in categories:\n",
+    " #   category_col_clean.append(cat[0])"
    ]
   },
   {
@@ -961,8 +961,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categories.columns = category_col_clean"
+    "#categories.columns = category_col_clean"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2424,6 +2431,627 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_y_data = df_clean_two.iloc[:,4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>related</th>\n",
+       "      <th>request</th>\n",
+       "      <th>offer</th>\n",
+       "      <th>aid_related</th>\n",
+       "      <th>medical_help</th>\n",
+       "      <th>medical_products</th>\n",
+       "      <th>search_and_rescue</th>\n",
+       "      <th>security</th>\n",
+       "      <th>military</th>\n",
+       "      <th>water</th>\n",
+       "      <th>...</th>\n",
+       "      <th>aid_centers</th>\n",
+       "      <th>other_infrastructure</th>\n",
+       "      <th>weather_related</th>\n",
+       "      <th>floods</th>\n",
+       "      <th>storm</th>\n",
+       "      <th>fire</th>\n",
+       "      <th>earthquake</th>\n",
+       "      <th>cold</th>\n",
+       "      <th>other_weather</th>\n",
+       "      <th>direct_report</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   related  request  offer  aid_related  medical_help  medical_products  \\\n",
+       "0        1        0      0            0             0                 0   \n",
+       "1        1        0      0            1             0                 0   \n",
+       "2        1        0      0            0             0                 0   \n",
+       "3        1        1      0            1             0                 1   \n",
+       "4        1        0      0            0             0                 0   \n",
+       "\n",
+       "   search_and_rescue  security  military  water  ...  aid_centers  \\\n",
+       "0                  0         0         0      0  ...            0   \n",
+       "1                  0         0         0      0  ...            0   \n",
+       "2                  0         0         0      0  ...            0   \n",
+       "3                  0         0         0      0  ...            0   \n",
+       "4                  0         0         0      0  ...            0   \n",
+       "\n",
+       "   other_infrastructure  weather_related  floods  storm  fire  earthquake  \\\n",
+       "0                     0                0       0      0     0           0   \n",
+       "1                     0                1       0      1     0           0   \n",
+       "2                     0                0       0      0     0           0   \n",
+       "3                     0                0       0      0     0           0   \n",
+       "4                     0                0       0      0     0           0   \n",
+       "\n",
+       "   cold  other_weather  direct_report  \n",
+       "0     0              0              0  \n",
+       "1     0              0              0  \n",
+       "2     0              0              0  \n",
+       "3     0              0              0  \n",
+       "4     0              0              0  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 323,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_y_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_names = list(df_y_data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum_of_data = df_y_data.sum().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = list(sum_of_data.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = list(sum_of_data.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "related                   19906\n",
+       "aid_related               10860\n",
+       "weather_related            7297\n",
+       "direct_report              5075\n",
+       "request                    4474\n",
+       "other_aid                  3446\n",
+       "food                       2923\n",
+       "earthquake                 2455\n",
+       "storm                      2443\n",
+       "shelter                    2314\n",
+       "floods                     2155\n",
+       "medical_help               2084\n",
+       "infrastructure_related     1705\n",
+       "water                      1672\n",
+       "other_weather              1376\n",
+       "buildings                  1333\n",
+       "medical_products           1313\n",
+       "transport                  1201\n",
+       "death                      1194\n",
+       "other_infrastructure       1151\n",
+       "refugees                    875\n",
+       "military                    860\n",
+       "search_and_rescue           724\n",
+       "money                       604\n",
+       "electricity                 532\n",
+       "cold                        530\n",
+       "security                    471\n",
+       "clothing                    405\n",
+       "aid_centers                 309\n",
+       "missing_people              298\n",
+       "hospitals                   283\n",
+       "fire                        282\n",
+       "tools                       159\n",
+       "shops                       120\n",
+       "offer                       118\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 351,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_of_data.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['related',\n",
+       " 'request',\n",
+       " 'offer',\n",
+       " 'aid_related',\n",
+       " 'medical_help',\n",
+       " 'medical_products',\n",
+       " 'search_and_rescue',\n",
+       " 'security',\n",
+       " 'military',\n",
+       " 'water',\n",
+       " 'food',\n",
+       " 'shelter',\n",
+       " 'clothing',\n",
+       " 'money',\n",
+       " 'missing_people',\n",
+       " 'refugees',\n",
+       " 'death',\n",
+       " 'other_aid',\n",
+       " 'infrastructure_related',\n",
+       " 'transport',\n",
+       " 'buildings',\n",
+       " 'electricity',\n",
+       " 'tools',\n",
+       " 'hospitals',\n",
+       " 'shops',\n",
+       " 'aid_centers',\n",
+       " 'other_infrastructure',\n",
+       " 'weather_related',\n",
+       " 'floods',\n",
+       " 'storm',\n",
+       " 'fire',\n",
+       " 'earthquake',\n",
+       " 'cold',\n",
+       " 'other_weather',\n",
+       " 'direct_report']"
+      ]
+     },
+     "execution_count": 347,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(sum_of_data.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum_of_data = pd.DataFrame(sum_of_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>related</th>\n",
+       "      <td>19906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>request</th>\n",
+       "      <td>4474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>offer</th>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aid_related</th>\n",
+       "      <td>10860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>medical_help</th>\n",
+       "      <td>2084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>medical_products</th>\n",
+       "      <td>1313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>search_and_rescue</th>\n",
+       "      <td>724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>security</th>\n",
+       "      <td>471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>military</th>\n",
+       "      <td>860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>water</th>\n",
+       "      <td>1672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>food</th>\n",
+       "      <td>2923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>shelter</th>\n",
+       "      <td>2314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>clothing</th>\n",
+       "      <td>405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>money</th>\n",
+       "      <td>604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>missing_people</th>\n",
+       "      <td>298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>refugees</th>\n",
+       "      <td>875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>death</th>\n",
+       "      <td>1194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>other_aid</th>\n",
+       "      <td>3446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>infrastructure_related</th>\n",
+       "      <td>1705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>transport</th>\n",
+       "      <td>1201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>buildings</th>\n",
+       "      <td>1333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>electricity</th>\n",
+       "      <td>532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tools</th>\n",
+       "      <td>159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hospitals</th>\n",
+       "      <td>283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>shops</th>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aid_centers</th>\n",
+       "      <td>309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>other_infrastructure</th>\n",
+       "      <td>1151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weather_related</th>\n",
+       "      <td>7297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>floods</th>\n",
+       "      <td>2155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>storm</th>\n",
+       "      <td>2443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fire</th>\n",
+       "      <td>282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>earthquake</th>\n",
+       "      <td>2455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cold</th>\n",
+       "      <td>530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>other_weather</th>\n",
+       "      <td>1376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>direct_report</th>\n",
+       "      <td>5075</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            0\n",
+       "related                 19906\n",
+       "request                  4474\n",
+       "offer                     118\n",
+       "aid_related             10860\n",
+       "medical_help             2084\n",
+       "medical_products         1313\n",
+       "search_and_rescue         724\n",
+       "security                  471\n",
+       "military                  860\n",
+       "water                    1672\n",
+       "food                     2923\n",
+       "shelter                  2314\n",
+       "clothing                  405\n",
+       "money                     604\n",
+       "missing_people            298\n",
+       "refugees                  875\n",
+       "death                    1194\n",
+       "other_aid                3446\n",
+       "infrastructure_related   1705\n",
+       "transport                1201\n",
+       "buildings                1333\n",
+       "electricity               532\n",
+       "tools                     159\n",
+       "hospitals                 283\n",
+       "shops                     120\n",
+       "aid_centers               309\n",
+       "other_infrastructure     1151\n",
+       "weather_related          7297\n",
+       "floods                   2155\n",
+       "storm                    2443\n",
+       "fire                      282\n",
+       "earthquake               2455\n",
+       "cold                      530\n",
+       "other_weather            1376\n",
+       "direct_report            5075"
+      ]
+     },
+     "execution_count": 341,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum_of_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10860"
+      ]
+     },
+     "execution_count": 325,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_y_data['aid_related'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 300,
    "metadata": {},
    "outputs": [
@@ -2531,6 +3159,26 @@
    ],
    "source": [
     "df_clean_two['message'][:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26028"
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_clean_two)"
    ]
   },
   {
