Removed files and Tweaked text in notebooks

--- a/ML Pipeline Preparation.ipynb
+++ b/ML Pipeline Preparation.ipynb
@@ -5,10 +5,9 @@
    "metadata": {},
    "source": [
     "# ML Pipeline Preparation\n",
-    "Follow the instructions below to help you create your ML pipeline.\n",
     "### 1. Import libraries and load data from database.\n",
     "- Import Python libraries\n",
-    "- Load dataset from database with [`read_sql_table`](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.read_sql_table.html)\n",
+    "- Loading dataset from database with [`read_sql_table`](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.read_sql_table.html)\n",
     "- Define feature and target variables X and Y"
    ]
   },
@@ -255,8 +254,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Build a machine learning pipeline\n",
-    "This machine pipeline should take in the `message` column as input and output classification results on the other 36 categories in the dataset. You may find the [MultiOutputClassifier](http://scikit-learn.org/stable/modules/generated/sklearn.multioutput.MultiOutputClassifier.html) helpful for predicting multiple target variables."
+    "### 3. A machine learning pipeline\n",
+    "This machine pipeline will take in the `message` column as input and output classification results on the other 36 categories in the dataset."
    ]
   },
   {
@@ -277,7 +276,7 @@
    "metadata": {},
    "source": [
     "### 4. Train pipeline\n",
-    "- Split data into train and test sets\n",
+    "- Splitting data into train and test sets\n",
     "- Train pipeline"
    ]
   },
@@ -426,7 +425,7 @@
    "metadata": {},
    "source": [
     "### 5. Test your model\n",
-    "Report the f1 score, precision and recall for each output category of the dataset. You can do this by iterating through the columns and calling sklearn's `classification_report` on each."
+    "Reporting the f1 score, precision and recall for each output category of the dataset."
    ]
   },
   {
@@ -749,7 +748,7 @@
    "metadata": {},
    "source": [
     "### 6. Improve your model\n",
-    "Use grid search to find better parameters. "
+    "Using grid search to find better parameters. "
    ]
   },
   {
@@ -947,9 +946,7 @@
    "metadata": {},
    "source": [
     "### 7. Test your model\n",
-    "Show the accuracy, precision, and recall of the tuned model.  \n",
-    "\n",
-    "Since this project focuses on code quality, process, and  pipelines, there is no minimum performance metric needed to pass. However, make sure to fine tune your models for accuracy, precision and recall to make your project stand out - especially for your portfolio!"
+    "Showing the accuracy, precision, and recall of the tuned model.  "
    ]
   },
   {
@@ -1104,9 +1101,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. Try improving your model further. Here are a few ideas:\n",
-    "* try other machine learning algorithms\n",
-    "* add other features besides the TF-IDF"
+    "### 8. Improving model\n",
+    "* Using other machine learning algorithms\n",
+    "* Adding other features besides the TF-IDF"
    ]
   },
   {
@@ -1478,8 +1475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10. Use this notebook to complete `train.py`\n",
-    "Use the template file attached in the Resources folder to write a script that runs the steps above to create a database and export a model based on a new dataset specified by the user."
+    "### 10. Using this notebook to complete `train.py`"
    ]
   },
   {
