--- a/ETL Pipeline Preparation.ipynb
+++ b/ETL Pipeline Preparation.ipynb
@@ -5,11 +5,8 @@
    "metadata": {},
    "source": [
     "# ETL Pipeline Preparation\n",
-    "Follow the instructions below to help you create your ETL pipeline.\n",
     "### 1. Import libraries and load datasets.\n",
-    "- Import Python libraries\n",
-    "- Load `messages.csv` into a dataframe and inspect the first few lines.\n",
-    "- Load `categories.csv` into a dataframe and inspect the first few lines."
+    "- Import Python libraries\n"
    ]
   },
   {
@@ -209,8 +206,8 @@
    "metadata": {},
    "source": [
     "### 2. Merge datasets.\n",
-    "- Merge the messages and categories datasets using the common id\n",
-    "- Assign this combined dataset to `df`, which will be cleaned in the following steps"
+    "- Merging the messages and categories datasets using the common id\n",
+    "- Assigning this combined dataset to `df`, which will be cleaned in the following steps"
    ]
   },
   {
@@ -330,9 +327,9 @@
    "metadata": {},
    "source": [
     "### 3. Split `categories` into separate category columns.\n",
-    "- Split the values in the `categories` column on the `;` character so that each value becomes a separate column. You'll find [this method](https://pandas.pydata.org/pandas-docs/version/0.23/generated/pandas.Series.str.split.html) very helpful! Make sure to set `expand=True`.\n",
-    "- Use the first row of categories dataframe to create column names for the categories data.\n",
-    "- Rename columns of `categories` with new column names."
+    "- Splitting the values in the `categories` column on the `;` character so that each value becomes a separate column. \n",
+    "- Using the first row of categories dataframe to create column names for the categories data.\n",
+    "- Renaming columns of `categories` with new column names."
    ]
   },
   {
@@ -695,9 +692,7 @@
     }
    ],
    "source": [
-    "# use this row to extract a list of new column names for categories.\n",
-    "# one way is to apply a lambda function that takes everything \n",
-    "# up to the second to last character of each string with slicing\n",
+    "# using this row to extract a list of new column names for categories.\n",
     "category_colnames = row.apply(lambda x : x.str.slice(0,-2))\n",
     "print(category_colnames)"
    ]
@@ -937,47 +932,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#category_col_clean = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#for cat in categories:\n",
-    " #   category_col_clean.append(cat[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#categories.columns = category_col_clean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 4. Convert category values to just numbers 0 or 1.\n",
-    "- Iterate through the category columns in df to keep only the last character of each string (the 1 or 0). For example, `related-0` becomes `0`, `related-1` becomes `1`. Convert the string to a numeric value.\n",
-    "- You can perform [normal string actions on Pandas Series](https://pandas.pydata.org/pandas-docs/stable/text.html#indexing-with-str), like indexing, by including `.str` after the Series. You may need to first convert the Series to be of type string, which you can do with `astype(str)`."
+    "- Iterating through the category columns in df to keep only the last character of each string (the 1 or 0). For example, `related-0` becomes `0`, `related-1` becomes `1`. Converting the string to a numeric value."
    ]
   },
   {
@@ -1711,7 +1670,7 @@
    "metadata": {},
    "source": [
     "### 5. Replace `categories` column in `df` with new category columns.\n",
-    "- Drop the categories column from the df dataframe since it is no longer needed.\n",
+    "- Droping the categories column from the df dataframe since it is no longer needed.\n",
     "- Concatenate df and categories data frames."
    ]
   },
@@ -1991,7 +1950,7 @@
    "metadata": {},
    "source": [
     "### 6. Remove duplicates.\n",
-    "- Check how many duplicates are in this dataset.\n",
+    "- Checking how many duplicates are in this dataset.\n",
     "- Drop the duplicates.\n",
     "- Confirm duplicates were removed."
    ]
@@ -2138,8 +2097,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. Save the clean dataset into an sqlite database.\n",
-    "You can do this with pandas [`to_sql` method](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.to_sql.html) combined with the SQLAlchemy library. Remember to import SQLAlchemy's `create_engine` in the first cell of this notebook to use it below."
+    "### 7. Save the clean dataset into an sqlite database.\n"
    ]
   },
   {
@@ -2156,8 +2114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. Use this notebook to complete `etl_pipeline.py`\n",
-    "Use the template file attached in the Resources folder to write a script that runs the steps above to create a database based on new datasets specified by the user. Alternatively, you can complete `etl_pipeline.py` in the classroom on the `Project Workspace IDE` coming later."
+    "### 8. Using this notebook to complete `etl_pipeline.py`"
    ]
   },
   {
